[tool.poetry]
name = "100daysofcodingchallenge"
version = "0.1.0"
description = ""
authors = ["smileboy11 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.4.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
